# doomcpp

./: .gitignore  CMakeLists.txt  README.md
docs/superpowers/plans/: 2026-07-19-p0-foundation.md  2026-07-20-p1-wad-loading.md  2026-07-20-p2a-map-and-automap.md  2026-07-20-p2b-bsp-renderer.md  2026-07-21-p3a-textured-walls.md  2026-07-22-p3b-visplanes.md  2026-07-22-p3c-collision-eyeheight.md
docs/superpowers/specs/: 2026-07-19-doom-clone-design.md  2026-07-21-p3a-textured-walls-design.md  2026-07-22-p3b-visplanes-design.md  2026-07-22-p3c-collision-eyeheight-design.md
src/: main.cpp
src/core/: doomtype.h  i_system.cpp  i_system.h  m_fixed.cpp  m_fixed.h  m_random.cpp  m_random.h
src/platform/: i_video.cpp  i_video.h
src/play/: p_map.cpp  p_map.h  p_maputl.cpp  p_maputl.h  p_setup.cpp  p_setup.h
src/render/: r_bsp.cpp  r_bsp.h  r_data.cpp  r_data.h  r_draw.cpp  r_draw.h  r_plane.cpp  r_plane.h
src/wad/: wadfile.cpp  wadfile.h
tests/: CMakeLists.txt  test_i_system.cpp  test_m_fixed.cpp  test_m_random.cpp  test_p_map.cpp  test_p_maputl.cpp  test_p_setup.cpp  test_r_data.cpp  test_r_draw.cpp  test_r_plane.cpp  test_smoke.cpp  test_wadfile.cpp
